--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,8 @@ python-dotenv==1.0.1
 openpyxl==3.1.5
 
 # Optional: For enhanced CSV processing
-chardet==5.2.0 
+chardet==5.2.0
+
+# Testing
+pytest==8.3.4
+pytest-asyncio==0.25.0 
