feat: expose new optimization settings

--- a/engine_config.json
+++ b/engine_config.json
@@ -6,7 +6,8 @@
   "cxa_pct": 0.04,
   "cac_bonus": 5000.0,
   "insurance_amount": 10999.0,
-  "gps_fee": 350.0,
+  "gps_installation_fee": 750.0,
+  "gps_monthly_fee": 350.0,
   "service_fee_range": [
     0.0,
     5.0
@@ -23,6 +24,8 @@
   "cxa_step": 0.01,
   "cac_bonus_step": 100,
   "max_offers_per_tier": 50,
+  "max_combinations_to_test": 1000,
+  "early_stop_on_offers": 100,
   "payment_delta_tiers": {
     "refresh": [
       -0.05,
