--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,9 @@ chardet==5.2.0
 # Testing
 pytest==8.3.4
 pytest-asyncio==0.25.0
+pytest-bdd==7.1.2
+hypothesis==6.100.0
+schemathesis==3.25.0
 
 # Server-Sent Events
 sse-starlette>=1.2.0
