Relocate tests from core/ to top-level tests/ directory

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [tool:pytest]
-testpaths = core
+testpaths = tests
 python_files = test_*.py *_test.py test_complete_system.py
 python_functions = test_*
 addopts = -v --tb=short
